--- a/index-2.html
+++ b/index-2.html
@@ -1,9 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from cncinfotech.in/index.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Sep 2023 07:58:39 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -396,61 +394,7 @@ $(document).ready(function() {
                     <p style="text-align:justify;" >CNC Infotech Skill Development Private Limited is a foundation standing strong since 22 years in the business, focusing into software development and IT educational enterprise that firmly believes in empowering young minds with skills and enlightening them with knowledge to be the future leaders. CNC is tantamount with INTEGRITY, INNOVATION and EXCELLENCE.</p>
                     
                 </div>
-                <div class="col-lg-3 col-sm-6 sub-two-right pl-lg-5 mt-sm-0 mt-5">
-                    <h6>Quick Link</h6>
-                    <ul>
-                        <li><a href="index-2.html"><span class="fas fa-angle-right mr-2"></span>Home</a>
-                        </li>
-                        <li><a target="_blank" href="https://cncdost.com/about.php"><span class="fas fa-angle-right mr-2"></span>About</a>
-                        </li>
-                        <li><a target="_blank" href="https://cncdost.com/career.php"><span class="fas fa-angle-right mr-2"></span>Career</a>
-                        </li>
-						<li><a target="_blank" href="http://cncdost.com/blog"><span class="fas fa-angle-right mr-2"></span>Blog</a>
-                        </li>
-                        <li><a href="contact.html"><span class="fas fa-angle-right mr-2"></span>Contact</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-sm-6 sub-two-right mt-lg-0 mt-sm-5 mt-4">
-                    <h6>Why CNC Infotech?</h6>
-                    <ul>
-                        <li><a>Live Projects</a></li>
-                        <li><a>Training & Development</a>
-                        </li>
-                        <li><a>Practical Training</a>
-                        </li>
-                        <li><a>Placement Assistance</a></li>
-						<li><a>Interview Preperations</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-sm-6 sub-two-right pl-lg-5 mt-lg-0 mt-sm-5 mt-4">
-                    <h6>Contact</h6>
-                    <p>3/322 Near Sabji Mandi, Sector 3 Malviya Nagar, Jaipur 302017<br>
-					+919649900725<br>
-					cncdost@gmail.com
-					</p>
-					<div class="columns-2">
-                        <ul class="social">
-                            <li><a target="_blank" href="https://www.youtube.com/c/CNCInfotech" title="facebook"><span class="fab fa-youtube"
-                                        aria-hidden="true"></span></a>
-                            </li>
-                            <li><a target="_blank" href="https://www.facebook.com/cncinfotech1/" title="facebook"><span class="fab fa-facebook-f"
-                                        aria-hidden="true"></span></a>
-                            </li>
-                            <li><a target="_blank" href="https://in.linkedin.com/in/cnc-infotech-81a469119" title="linkedin"><span class="fab fa-linkedin-in"
-                                        aria-hidden="true"></span></a>
-                            </li>
-                            <li><a target="_blank" href="https://twitter.com/infotech_cnc?lang=en" title="twitter"><span class="fab fa-twitter"
-                                        aria-hidden="true"></span></a>
-                            </li>
-                            <li><a target="_blank" href="https://www.instagram.com/cnc_infotech/?hl=en" title="instagram"><span class="fab fa-instagram"
-                                        aria-hidden="true"></span></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+                
         <!-- copyright -->
         <div class="copyright-footer text-center mt-4">
             <div class="container">
@@ -463,7 +407,7 @@ $(document).ready(function() {
         </div>
         <!-- //copyright -->
     </footer>
-    <!-- //footer -->    <!-- Js scripts -->
+    <!-- //footer -->
     <!-- move top -->
     <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fas fa-level-up-alt" aria-hidden="true"></span>
@@ -489,10 +433,7 @@ $(document).ready(function() {
         }
     </script>
     <!-- //move top -->
-
-    <!-- common jquery plugin -->
     <script src="assets/js/jquery-3.3.1.min.js"></script>
-    <!-- //common jquery plugin -->
 
     <!-- theme switch js (light and dark)-->
     <script src="assets/js/theme-change.js"></script>
@@ -525,9 +466,6 @@ $(document).ready(function() {
         }
 
         $(document).ready(function () {
-            // Now to start autoTyping just call the autoType function with the 
-            // class of outer div
-            // The second paramter is the speed between each letter is typed.   
             autoType(".type-js", 200);
         });
     </script>
