--- a/index-2.html
+++ b/index-2.html
@@ -389,7 +389,7 @@ $(document).ready(function() {
     <footer class="w3l-footer-22 py-5">
         <div class="container py-md-5 py-4">
             <div class="row sub-columns pt-lg-2">
-                <div class="col-lg-4 col-sm-6 sub-one-left">
+                <div class="col-12">
                     <h6>About </h6>
                     <p style="text-align:justify;" >CNC Infotech Skill Development Private Limited is a foundation standing strong since 22 years in the business, focusing into software development and IT educational enterprise that firmly believes in empowering young minds with skills and enlightening them with knowledge to be the future leaders. CNC is tantamount with INTEGRITY, INNOVATION and EXCELLENCE.</p>
                     
